Fix spacing on login pages when width decreased

--- a/ui/src/app/pages/login/login.page.scss
+++ b/ui/src/app/pages/login/login.page.scss
@@ -51,9 +51,10 @@ ion-grid {
                         }
                     }
 
-                    ion-button {
-                        color: #1f1f1f;
+                    ion-button {    
+                        color: var(--theme-container-bg-dark);
                         --background: white;
+                        font-weight: bold;
                         margin-top: 30px;
                     }
 
